exercises/networking/cka/05-gateway-api/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: cka-net-5
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
