exercises/networking/cka/05-gateway-api/web-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
  namespace: cka-net-5
spec:
  parentRefs:
  - name: web-gw
  hostnames:
  - gw.cka.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: web-svc
      port: 80
